--- a/src/app/admin/admin-rules/admin-rules.component.html
+++ b/src/app/admin/admin-rules/admin-rules.component.html
@@ -11,52 +11,60 @@
       <div class="actions">
         <button bioButton primary (click)="addRule()" type="button">Add rule</button>
       </div>
-      <ng-container controlArrayName="rules" *ngIf="!loadingType; else loadingTypeTemplate">
-        <h5 *ngIf="!rulesControl.length">No rules found</h5>
-        <div
-          class="item"
-          *ngFor="let ruleControl of rulesControl; trackBy: trackByControl; let $index = index"
-          [controlGroupName]="$index"
-          cdkDrag
-        >
-          <div class="icon-wrapper drag">
-            <bio-icon cdkDragHandle>drag_handle</bio-icon>
-          </div>
-          <bio-form-field *ngIf="ruleControl.value$ | async as ruleValue" label="{{ ruleValue.order }}">
-            <textarea
-              bioInput
-              controlName="description"
-              cdkTextareaAutosize
-              [cdkAutosizeMinRows]="1"
-              [cdkAutosizeMaxRows]="6"
-            ></textarea>
-            <bio-errors>
-              <bio-error *error="'required'">Description is required</bio-error>
-              <bio-error *error="'whiteSpace'">Description is required</bio-error>
-            </bio-errors>
-          </bio-form-field>
-          <div class="icon-wrapper delete">
-            <button bioButton icon type="button" (click)="deleteRule($index)">
-              <bio-icon>delete</bio-icon>
-            </button>
-          </div>
-        </div>
-      </ng-container>
-      <ng-template #loadingTypeTemplate>
+      @if (!loadingType) {
+        <ng-container controlArrayName="rules">
+          @if (!rulesControl.length) {
+            <h5>No rules found</h5>
+          }
+          @for (ruleControl of rulesControl; track trackByControl($index, ruleControl)) {
+            <div
+              class="item"
+              [controlGroupName]="$index"
+              cdkDrag
+              >
+              <div class="icon-wrapper drag">
+                <bio-icon cdkDragHandle>drag_handle</bio-icon>
+              </div>
+              @if (ruleControl.value$ | async; as ruleValue) {
+                <bio-form-field label="{{ ruleValue.order }}">
+                  <textarea
+                    bioInput
+                    controlName="description"
+                    cdkTextareaAutosize
+                    [cdkAutosizeMinRows]="1"
+                    [cdkAutosizeMaxRows]="6"
+                  ></textarea>
+                  <bio-errors>
+                    <bio-error *error="'required'">Description is required</bio-error>
+                    <bio-error *error="'whiteSpace'">Description is required</bio-error>
+                  </bio-errors>
+                </bio-form-field>
+              }
+              <div class="icon-wrapper delete">
+                <button bioButton icon type="button" (click)="deleteRule($index)">
+                  <bio-icon>delete</bio-icon>
+                </button>
+              </div>
+            </div>
+          }
+        </ng-container>
+      } @else {
         <bio-loading></bio-loading>
-      </ng-template>
+      }
     </bio-card-content>
-    <bio-card-actions (mouseenter)="onMouseenterActions()" *ngIf="deletedControl.value$ | async as deletedValue">
-      <button
-        bioButton
-        primary
-        type="submit"
-        [disabled]="(form.invalid || form.pristine) && !deletedValue.length"
-        [loading]="saving"
-      >
-        Save
-      </button>
-      <button bioButton primary type="reset" [disabled]="form.pristine && !deletedValue.length">Reset</button>
-    </bio-card-actions>
+    @if (deletedControl.value$ | async; as deletedValue) {
+      <bio-card-actions (mouseenter)="onMouseenterActions()">
+        <button
+          bioButton
+          primary
+          type="submit"
+          [disabled]="(form.invalid || form.pristine) && !deletedValue.length"
+          [loading]="saving"
+          >
+          Save
+        </button>
+        <button bioButton primary type="reset" [disabled]="form.pristine && !deletedValue.length">Reset</button>
+      </bio-card-actions>
+    }
   </bio-card>
 </form>
