--- a/src/app/auth/change-password/change-password/change-password.component.html
+++ b/src/app/auth/change-password/change-password/change-password.component.html
@@ -1,15 +1,16 @@
 <bio-card class="center-block-mobile">
   <h3 bioCardTitle>Change password</h3>
   <bio-card-content [class.text-success]="sentEmail">
-    <ng-container *ngIf="sentEmail; else emailNotSent">
+    @if (sentEmail) {
       <bio-icon outlined>check_circle</bio-icon>
       E-mail was sent successfully!
-    </ng-container>
-    <ng-template #emailNotSent>
+    } @else {
       To change you will need to follow the instructions that we will send to your e-mail.
-    </ng-template>
+    }
   </bio-card-content>
-  <bio-card-actions *ngIf="!sentEmail">
-    <button bioButton primary type="button" (click)="sendEmail()" [loading]="sendingEmail">Send e-mail</button>
-  </bio-card-actions>
+  @if (!sentEmail) {
+    <bio-card-actions>
+      <button bioButton primary type="button" (click)="sendEmail()" [loading]="sendingEmail">Send e-mail</button>
+    </bio-card-actions>
+  }
 </bio-card>
