--- a/src/app/auth/forgot-password/forgot-password.component.html
+++ b/src/app/auth/forgot-password/forgot-password.component.html
@@ -1,29 +1,30 @@
 <form [controlGroup]="emailForm" (groupSubmit)="submit()" class="center-container">
   <bio-card class="center-block-mobile">
     <h3 bioCardTitle>Forgot password</h3>
-    <bio-card-content *ngIf="emailSent; else email">
-      <bio-confirmation-code-input
-        controlName="code"
-        (focusoutLastItem)="inputNewPassword.focus()"
-        label="Confirmation code"
-        [codeError]="confirmCodeError"
-      ></bio-confirmation-code-input>
-      <bio-form-field label="New password">
-        <input
-          #inputNewPassword
-          autocomplete="new-password"
-          placeholder="New password"
-          bioInput
-          controlName="password"
-          type="password"
-        />
-        <bio-errors>
-          <bio-error *error="'required'">New password is required</bio-error>
-        </bio-errors>
-      </bio-form-field>
-      <bio-password-strong [password]="password$ | async"></bio-password-strong>
-    </bio-card-content>
-    <ng-template #email>
+    @if (emailSent) {
+      <bio-card-content>
+        <bio-confirmation-code-input
+          controlName="code"
+          (focusoutLastItem)="inputNewPassword.focus()"
+          label="Confirmation code"
+          [codeError]="confirmCodeError"
+        ></bio-confirmation-code-input>
+        <bio-form-field label="New password">
+          <input
+            #inputNewPassword
+            autocomplete="new-password"
+            placeholder="New password"
+            bioInput
+            controlName="password"
+            type="password"
+            />
+          <bio-errors>
+            <bio-error *error="'required'">New password is required</bio-error>
+          </bio-errors>
+        </bio-form-field>
+        <bio-password-strong [password]="password$ | async"></bio-password-strong>
+      </bio-card-content>
+    } @else {
       <bio-card-content>
         <p>Forgot your password? No problemo, just fill the box bellow with your e-mail and hit the button</p>
         <bio-form-field label="E-mail">
@@ -34,7 +35,7 @@
           </bio-errors>
         </bio-form-field>
       </bio-card-content>
-    </ng-template>
+    }
 
     <bio-card-actions>
       <button bioButton type="submit" primary [disabled]="emailForm.invalid" [loading]="loading">
