--- a/src/app/forum/forum-sub-category-moderator-management/forum-sub-category-moderator-management.component.html
+++ b/src/app/forum/forum-sub-category-moderator-management/forum-sub-category-moderator-management.component.html
@@ -1,4 +1,6 @@
-<bio-loading *ngIf="loading"></bio-loading>
+@if (loading) {
+  <bio-loading></bio-loading>
+}
 <h4 bioModalTitle>{{ nameSubCategory }} - Manage moderators</h4>
 <bio-modal-content>
   <bio-multi-select
@@ -6,7 +8,7 @@
     (allSelected)="onAllSelected()"
     [disabledRemoveAll]="!subCategoryModeratorsSelected.length"
     [disabledSelectAll]="!subCategoryModerators.length"
-  >
+    >
     <bio-list
       bioMultiSelectItems
       items
@@ -14,29 +16,35 @@
       debounceTime="400"
       [bioLoading]="loadingModerators"
       hint="Type at least 3 characters to start searching"
-    >
-      <bio-list-item *ngIf="!loadingModerators && !subCategoryModerators.length">No data found</bio-list-item>
-      <bio-list-item *ngFor="let subCategoryModerator of subCategoryModerators; trackBy: trackById">
-        <button bioButton type="button" bioPrefix icon (click)="onSelectItem(subCategoryModerator)">
-          <bio-icon>chevron_right</bio-icon>
-        </button>
-        <bio-list-item-line>{{ subCategoryModerator.playerPersonaName }}</bio-list-item-line>
-      </bio-list-item>
+      >
+      @if (!loadingModerators && !subCategoryModerators.length) {
+        <bio-list-item>No data found</bio-list-item>
+      }
+      @for (subCategoryModerator of subCategoryModerators; track trackById($index, subCategoryModerator)) {
+        <bio-list-item>
+          <button bioButton type="button" bioPrefix icon (click)="onSelectItem(subCategoryModerator)">
+            <bio-icon>chevron_right</bio-icon>
+          </button>
+          <bio-list-item-line>{{ subCategoryModerator.playerPersonaName }}</bio-list-item-line>
+        </bio-list-item>
+      }
     </bio-list>
     <bio-list bioMultiSelectItems selected [(search)]="subCategoryModeratorsSelectedSearch" debounceTime="400">
-      <bio-list-item *ngIf="!subCategoryModeratorsSelected.length">No data found</bio-list-item>
-      <bio-list-item
-        *ngFor="
-          let subCategoryModerator of subCategoryModeratorsSelected
-            | search: 'playerPersonaName':subCategoryModeratorsSelectedSearch;
-          trackBy: trackById
-        "
-      >
-        <button bioButton type="button" bioPrefix icon (click)="onRemoveItem(subCategoryModerator)">
-          <bio-icon>chevron_left</bio-icon>
-        </button>
-        <bio-list-item-line>{{ subCategoryModerator.playerPersonaName }}</bio-list-item-line>
-      </bio-list-item>
+      @if (!subCategoryModeratorsSelected.length) {
+        <bio-list-item>No data found</bio-list-item>
+      }
+      @for (
+        subCategoryModerator of subCategoryModeratorsSelected
+        | search: 'playerPersonaName':subCategoryModeratorsSelectedSearch; track trackById($index,
+        subCategoryModerator)) {
+        <bio-list-item
+          >
+          <button bioButton type="button" bioPrefix icon (click)="onRemoveItem(subCategoryModerator)">
+            <bio-icon>chevron_left</bio-icon>
+          </button>
+          <bio-list-item-line>{{ subCategoryModerator.playerPersonaName }}</bio-list-item-line>
+        </bio-list-item>
+      }
     </bio-list>
   </bio-multi-select>
 </bio-modal-content>
@@ -51,7 +59,7 @@
       !subCategoryModeratorsDeletedMap.size &&
       (subCategoryModeratorsSelected | forumSubCategoryModeratorManagementValidation)
     "
-  >
+    >
     Save
   </button>
 </bio-modal-actions>
