--- a/src/app/shared/breadcrumbs/breadcrumbs.component.html
+++ b/src/app/shared/breadcrumbs/breadcrumbs.component.html
@@ -1,17 +1,18 @@
-<ng-container *ngFor="let breadcrumb of breadcrumbs$ | async; trackBy: trackBy; let $last = last">
-  <span *ngIf="$last; else notLast" class="item">
-    {{ breadcrumb.name }}
-  </span>
-  <ng-template #notLast>
+@for (breadcrumb of breadcrumbs$ | async; track trackBy($index, breadcrumb)) {
+  @if ($last) {
+    <span class="item">
+      {{ breadcrumb.name }}
+    </span>
+  } @else {
     <a
       class="item"
       [routerLink]="breadcrumb.path"
       [queryParams]="breadcrumb.queryParams"
       [queryParamsHandling]="breadcrumb.queryParamsHandling"
       [preserveFragment]="breadcrumb.preserveFragment ?? false"
-    >
+      >
       {{ breadcrumb.name }}
     </a>
     <span class="separator">/</span>
-  </ng-template>
-</ng-container>
+  }
+}
