--- a/src/app/shared/components/datepicker/calendar-years/calendar-years.component.html
+++ b/src/app/shared/components/datepicker/calendar-years/calendar-years.component.html
@@ -1,12 +1,13 @@
-<button
-  *ngFor="let year of years; trackBy: trackBy"
-  bioButton
-  fab
-  type="button"
-  [class.same-year]="year === todayYear"
-  [class.selected]="year === valueYear"
-  [disabled]="disabled"
-  (click)="yearSelect.emit(year)"
->
-  {{ year }}
-</button>
+@for (year of years; track trackBy($index, year)) {
+  <button
+    bioButton
+    fab
+    type="button"
+    [class.same-year]="year === todayYear"
+    [class.selected]="year === valueYear"
+    [disabled]="disabled"
+    (click)="yearSelect.emit(year)"
+    >
+    {{ year }}
+  </button>
+}
