--- a/src/app/shared/components/select/option.component.html
+++ b/src/app/shared/components/select/option.component.html
@@ -1,11 +1,11 @@
-<bio-checkbox
-  *ngIf="multiple; else single"
-  [checked]="isSelected"
-  (checkedChange)="onCheckedChange()"
-  [disabled]="disabled"
->
-  <ng-container [ngTemplateOutlet]="single"></ng-container>
-</bio-checkbox>
-<ng-template #single>
+@if (multiple) {
+  <bio-checkbox
+    [checked]="isSelected"
+    (checkedChange)="onCheckedChange()"
+    [disabled]="disabled"
+    >
+    <ng-container [ngTemplateOutlet]="single"></ng-container>
+  </bio-checkbox>
+} @else {
   <ng-content></ng-content>
-</ng-template>
+}
