--- a/src/app/shared/components/table/table-cell/table-cell.component.html
+++ b/src/app/shared/components/table/table-cell/table-cell.component.html
@@ -1,19 +1,19 @@
-<ng-container *ngIf="!colDef.component">
-  <ng-container
-    *ngIf="colDef.template; else noTemplate"
-    [ngTemplateOutlet]="colDef.template"
-    [ngTemplateOutletContext]="{ item: item, colDef: colDef }"
-  >
-  </ng-container>
-  <ng-template #noTemplate>
+@if (!colDef.component) {
+  @if (colDef.template) {
+    <ng-container
+      [ngTemplateOutlet]="colDef.template"
+      [ngTemplateOutletContext]="{ item: item, colDef: colDef }"
+      >
+    </ng-container>
+  } @else {
     <span
       *ngLet="item[colDef.property] | tableCellFormatter: colDef.formatter as value"
       [bioTooltip]="item | tableCellTooltip: colDef.tooltip:value"
       [bioTooltipPosition]="colDef.tooltipPosition"
       [bioTooltipDisabled]="!colDef.tooltip"
-    >
+      >
       {{ value }}
     </span>
-  </ng-template>
-</ng-container>
+  }
+}
 <ng-template cdkPortalOutlet></ng-template>
