--- a/src/app/shared/multi-select/multi-select-items.component.html
+++ b/src/app/shared/multi-select/multi-select-items.component.html
@@ -7,9 +7,11 @@
       [disabled]="searchInputDisabled"
       autocomplete="off"
       type="search"
-    />
+      />
     <bio-icon bioSuffix>search</bio-icon>
-    <bio-hint *ngIf="hint">{{ hint }}</bio-hint>
+    @if (hint) {
+      <bio-hint>{{ hint }}</bio-hint>
+    }
   </bio-form-field>
 </div>
 <div class="list">
