--- a/src/app/stlmpp/stlmpp.component.html
+++ b/src/app/stlmpp/stlmpp.component.html
@@ -1,9 +1,10 @@
 <bio-card *ngLet="fragment$ | async as fragment" class="center-block-mobile">
-  <div
-    *ngIf="fragment"
-    @fadeInOut
-    class="cdk-overlay-backdrop cdk-overlay-dark-backdrop cdk-overlay-backdrop-showing"
-  ></div>
+  @if (fragment) {
+    <div
+      @fadeInOut
+      class="cdk-overlay-backdrop cdk-overlay-dark-backdrop cdk-overlay-backdrop-showing"
+    ></div>
+  }
   <h3 bioCardTitle>stLmpp</h3>
   <div bioCardSubtitle>Creator of biomercs.net</div>
   <bio-card-content>
