--- a/src/app/forum/forum-categories/forum-categories-recent-topics/forum-categories-recent-topics.component.html
+++ b/src/app/forum/forum-categories/forum-categories-recent-topics/forum-categories-recent-topics.component.html
@@ -1,5 +1,6 @@
-<div *ngFor="let recentTopic of recentTopics; trackBy: trackBy">
-  <a
+@for (recentTopic of recentTopics; track trackBy($index, recentTopic)) {
+  <div>
+    <a
     [routerLink]="[
       'category',
       recentTopic.idCategory,
@@ -10,13 +11,14 @@
       'post',
       recentTopic.idPost
     ]"
-  >
-    {{ recentTopic.postName }}
-  </a>
-  by
-  <a [routerLink]="['/player', recentTopic.idPlayer]">{{ recentTopic.playerPersonaName }}</a>
-  (<a [routerLink]="['category', recentTopic.idCategory, 'sub-category', recentTopic.idSubCategory, 'page', 1]">{{
+      >
+      {{ recentTopic.postName }}
+    </a>
+    by
+    <a [routerLink]="['/player', recentTopic.idPlayer]">{{ recentTopic.playerPersonaName }}</a>
+    (<a [routerLink]="['category', recentTopic.idCategory, 'sub-category', recentTopic.idSubCategory, 'page', 1]">{{
     recentTopic.nameSubCategory
-  }}</a
-  >) on {{ recentTopic.postDate | authDateFormat }}
-</div>
+    }}</a
+    >) on {{ recentTopic.postDate | authDateFormat }}
+  </div>
+}
