--- a/src/app/forum/forum-sub-category/forum-sub-category-topic/forum-sub-category-topic.component.html
+++ b/src/app/forum/forum-sub-category/forum-sub-category-topic/forum-sub-category-topic.component.html
@@ -7,7 +7,7 @@
   {{ topic.name }}
 </div>
 <div class="grid-container__icons">
-  <ng-container *ngIf="topic.isModerator">
+  @if (topic.isModerator) {
     <button bioButton icon type="button" class="icon-moderator" (click)="onLockUnlock($event)" [disabled]="locking">
       <bio-icon [bioTooltip]="topic.lockedDate ? 'Unlock' : 'Lock'" outlined>
         {{ topic.lockedDate ? 'lock_open' : 'lock' }}
@@ -16,7 +16,7 @@
     <button bioButton icon type="button" class="icon-moderator" (click)="onPinUnpin($event)" [disabled]="pinning">
       <bio-icon [mdi]="topic.pinned ? mdiPinOff : mdiPin" [bioTooltip]="topic.pinned ? 'Unpin' : 'Pin'"> </bio-icon>
     </button>
-  </ng-container>
+  }
   <bio-icon class="icon-user" [class.show]="topic.lockedDate" bioTooltip="Locked" outlined>lock</bio-icon>
   <bio-icon class="icon-user" [class.show]="topic.pinned" [mdi]="mdiPin" bioTooltip="Pinned"></bio-icon>
 </div>
