--- a/src/app/notification/notifications/notifications.component.html
+++ b/src/app/notification/notifications/notifications.component.html
@@ -1,23 +1,29 @@
-<div class="actions" *ngIf="notifications.length">
-  <button bioButton type="button" (click)="deleteAll()" [loading]="deleteAllLoading" danger>Delete all</button>
-  <button bioButton type="button" (click)="readAll()" [loading]="readAllLoading" primary>Read all</button>
-</div>
+@if (notifications.length) {
+  <div class="actions">
+    <button bioButton type="button" (click)="deleteAll()" [loading]="deleteAllLoading" danger>Delete all</button>
+    <button bioButton type="button" (click)="readAll()" [loading]="readAllLoading" primary>Read all</button>
+  </div>
+}
 <bio-list selectable [bioLoading]="loading">
   <cdk-virtual-scroll-viewport
     itemSize="90"
     (scrolledIndexChange)="onScrolledIndexChange($event)"
     [class.viewport-no-data-found]="!notifications.length && !loading"
-  >
-    <div class="no-data-found" *ngIf="!notifications.length && !loading">Nothing here to see</div>
+    >
+    @if (!notifications.length && !loading) {
+      <div class="no-data-found">Nothing here to see</div>
+    }
     <bio-list-item
       *cdkVirtualFor="let notification of notifications; trackBy: trackById"
       [disabled]="notification.loading"
       (click)="openModal(notification)"
       [title]="notification.content"
       [class.unread]="!notification.read"
-    >
+      >
       <bio-list-item-line> {{ notification.content }} </bio-list-item-line>
-      <bio-spinner bioSuffix [size]="0.1" *ngIf="notification.loading"></bio-spinner>
+      @if (notification.loading) {
+        <bio-spinner bioSuffix [size]="0.1"></bio-spinner>
+      }
       <div bioSuffix>
         <button
           type="button"
@@ -26,7 +32,7 @@
           [bioMenuTrigger]="menu"
           [loading]="notification.readLoading || notification.deleteLoading"
           (click)="$event.stopPropagation()"
-        >
+          >
           <bio-icon>more_vert</bio-icon>
         </button>
       </div>
@@ -37,7 +43,7 @@
           bioButton
           [loading]="notification.readLoading"
           (click)="toggleRead(notification)"
-        >
+          >
           <bio-icon>{{ notification.read ? 'drafts' : 'markunread' }}</bio-icon>
           {{ notification.read ? 'Unread' : 'Read' }}
         </button>
@@ -47,15 +53,17 @@
           bioButton
           [loading]="notification.deleteLoading"
           (click)="delete(notification)"
-        >
+          >
           <bio-icon>delete</bio-icon>
           Delete
         </button>
       </bio-menu>
     </bio-list-item>
-    <bio-list-item *ngIf="loadingMore">
-      <bio-list-item-line>Loading...</bio-list-item-line>
-      <bio-spinner bioSuffix [size]="0.1"></bio-spinner>
-    </bio-list-item>
+    @if (loadingMore) {
+      <bio-list-item>
+        <bio-list-item-line>Loading...</bio-list-item-line>
+        <bio-spinner bioSuffix [size]="0.1"></bio-spinner>
+      </bio-list-item>
+    }
   </cdk-virtual-scroll-viewport>
 </bio-list>
