--- a/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
+++ b/src/app/player/player-change-requests/player-change-requests-modal/player-change-requests-modal.component.html
@@ -2,7 +2,7 @@
   <h4 bioModalTitle>Update score</h4>
   <bio-modal-content>
     <div controlArrayName="scorePlayers">
-      <ng-container *ngFor="let scorePlayer of data.score.scorePlayers; trackBy: trackById; let $index = index">
+      @for (scorePlayer of data.score.scorePlayers; track trackById($index, scorePlayer)) {
         <div [controlGroupName]="$index" class="player">
           <div class="title">
             <h5>Player {{ $index + 1 }} ({{ scorePlayer.idPlayer }})</h5>
@@ -15,128 +15,138 @@
             <!--<editor-fold desc="Character">-->
             <bio-form-field [loading]="loadingCharacters" label="Character">
               <bio-select controlName="idCharacterCostume" placeholder="Character">
-                <bio-option disabled *ngIf="loadingCharacters">
-                  <bio-spinner [size]="0.1"></bio-spinner> Loading...
-                </bio-option>
-                <bio-optgroup
-                  *ngFor="let character of characters$ | async; trackBy: trackById"
-                  [label]="character.name"
-                  [title]="character.name"
-                >
-                  <bio-option
-                    *ngFor="let characterCostume of character.characterCostumes; trackBy: trackById"
-                    [value]="characterCostume.id"
-                    title="{{ character.name }} {{ characterCostume.name }}"
-                  >
-                    {{ characterCostume.name }}
+                @if (loadingCharacters) {
+                  <bio-option disabled>
+                    <bio-spinner [size]="0.1"></bio-spinner> Loading...
                   </bio-option>
-                </bio-optgroup>
+                }
+                @for (character of characters$ | async; track trackById($index, character)) {
+                  <bio-optgroup
+                    [label]="character.name"
+                    [title]="character.name"
+                    >
+                    @for (characterCostume of character.characterCostumes; track trackById($index, characterCostume)) {
+                      <bio-option
+                        [value]="characterCostume.id"
+                        title="{{ character.name }} {{ characterCostume.name }}"
+                        >
+                        {{ characterCostume.name }}
+                      </bio-option>
+                    }
+                  </bio-optgroup>
+                }
               </bio-select>
               <bio-errors>
                 <bio-error *error="'required'">Character is required</bio-error>
               </bio-errors>
             </bio-form-field>
-            <!--</editor-fold>-->
-            <bio-form-field label="Description">
-              <input bioInput controlName="description" placeholder="Description" />
-              <bio-errors>
-                <bio-error *error="'required'">Description is required</bio-error>
-              </bio-errors>
-            </bio-form-field>
-            <bio-form-field label="Bullet kills">
-              <input bioInput controlName="bulletKills" placeholder="Number of bullet kills" type="number" />
-              <bio-errors>
-                <bio-error *error="'required'">Bullet kills is required</bio-error>
-              </bio-errors>
-            </bio-form-field>
-            <bio-form-field label="Evidence">
-              <input bioInput controlName="evidence" placeholder="Evidence video URL" type="url" />
-              <bio-errors>
-                <bio-error *error="'required'">Evidence is required</bio-error>
-                <bio-error *error="'url'">Evidence must be an URL</bio-error>
-              </bio-errors>
-            </bio-form-field>
-            <bio-form-field label="Controller" [loading]="loadingInputTypes">
-              <bio-select controlName="idPlatformInputType" placeholder="Controller">
+          <!--</editor-fold>-->
+          <bio-form-field label="Description">
+            <input bioInput controlName="description" placeholder="Description" />
+            <bio-errors>
+              <bio-error *error="'required'">Description is required</bio-error>
+            </bio-errors>
+          </bio-form-field>
+          <bio-form-field label="Bullet kills">
+            <input bioInput controlName="bulletKills" placeholder="Number of bullet kills" type="number" />
+            <bio-errors>
+              <bio-error *error="'required'">Bullet kills is required</bio-error>
+            </bio-errors>
+          </bio-form-field>
+          <bio-form-field label="Evidence">
+            <input bioInput controlName="evidence" placeholder="Evidence video URL" type="url" />
+            <bio-errors>
+              <bio-error *error="'required'">Evidence is required</bio-error>
+              <bio-error *error="'url'">Evidence must be an URL</bio-error>
+            </bio-errors>
+          </bio-form-field>
+          <bio-form-field label="Controller" [loading]="loadingInputTypes">
+            <bio-select controlName="idPlatformInputType" placeholder="Controller">
+              @for (platformInputType of platformInputTypes$ | async; track trackById($index, platformInputType)) {
                 <bio-option
-                  *ngFor="let platformInputType of platformInputTypes$ | async; trackBy: trackById"
                   [value]="platformInputType.id"
-                >
+                  >
                   {{ platformInputType.nameInputType }}
                 </bio-option>
-              </bio-select>
-            </bio-form-field>
-          </div>
-          <div *ngIf="scorePlayersControl.get($index)! as playerControl">
+              }
+            </bio-select>
+          </bio-form-field>
+        </div>
+        @if (scorePlayersControl.get($index)!; as playerControl) {
+          <div>
             <ng-container *ngLet="playerControl.value$ | async as playerUpdate">
-              <a *ngIf="playerControl.get('evidence')!.valid" bio-url-preview [url]="playerUpdate.evidence || null"></a>
+              @if (playerControl.get('evidence')!.valid) {
+                <a bio-url-preview [url]="playerUpdate.evidence || null"></a>
+              }
             </ng-container>
           </div>
-        </div>
-        <hr />
-      </ng-container>
-    </div>
-    <div class="score-info body">
-      <bio-form-field label="Score">
-        <input bioInput controlName="score" bioCurrencyMask placeholder="Score" autocomplete="off" />
-        <bio-errors>
-          <bio-error *error="'required'">Score is required</bio-error>
-        </bio-errors>
-      </bio-form-field>
-      <bio-form-field label="Max combo">
-        <input bioInput controlName="maxCombo" type="number" autocomplete="off" />
-        <bio-errors>
-          <bio-error *error="'required'">Max combo is required</bio-error>
-          <bio-error *error="'min'">Max combo can't be negative</bio-error>
-          <bio-error *error="'max'">Max combo can't surpass 400</bio-error>
-        </bio-errors>
-      </bio-form-field>
-      <bio-form-field label="Time">
-        <input
-          bioInput
-          controlName="time"
-          [bioMask]="maskEnum.time"
-          [dropSpecialCharacters]="false"
-          [patterns]="maskTimePattern"
-          autocomplete="off"
+        }
+      </div>
+      <hr />
+    }
+  </div>
+  <div class="score-info body">
+    <bio-form-field label="Score">
+      <input bioInput controlName="score" bioCurrencyMask placeholder="Score" autocomplete="off" />
+      <bio-errors>
+        <bio-error *error="'required'">Score is required</bio-error>
+      </bio-errors>
+    </bio-form-field>
+    <bio-form-field label="Max combo">
+      <input bioInput controlName="maxCombo" type="number" autocomplete="off" />
+      <bio-errors>
+        <bio-error *error="'required'">Max combo is required</bio-error>
+        <bio-error *error="'min'">Max combo can't be negative</bio-error>
+        <bio-error *error="'max'">Max combo can't surpass 400</bio-error>
+      </bio-errors>
+    </bio-form-field>
+    <bio-form-field label="Time">
+      <input
+        bioInput
+        controlName="time"
+        [bioMask]="maskEnum.time"
+        [dropSpecialCharacters]="false"
+        [patterns]="maskTimePattern"
+        autocomplete="off"
         />
-        <bio-errors>
-          <bio-error *error="'required'">Time is required</bio-error>
-        </bio-errors>
-      </bio-form-field>
-    </div>
-    <hr />
-    <h5>Changes Requested</h5>
-    <div class="score-changes" controlArrayName="idsScoreChangeRequests">
+      <bio-errors>
+        <bio-error *error="'required'">Time is required</bio-error>
+      </bio-errors>
+    </bio-form-field>
+  </div>
+  <hr />
+  <h5>Changes Requested</h5>
+  <div class="score-changes" controlArrayName="idsScoreChangeRequests">
+    @for (scoreChangeRequest of data.score.scoreChangeRequests; track trackById($index, scoreChangeRequest)) {
       <div
-        *ngFor="let scoreChangeRequest of data.score.scoreChangeRequests; trackBy: trackById; let $index = index"
         [controlGroupName]="$index"
-      >
+        >
         <bio-checkbox controlName="checked">{{ scoreChangeRequest.description }}</bio-checkbox>
       </div>
-    </div>
-    <hr />
-  </bio-modal-content>
-  <bio-modal-actions end>
-    <button bioButton type="button" (click)="modalRef.close()" [disabled]="loading">Close</button>
-    <button
-      bioButton
-      type="submit"
-      [disabled]="form.invalid || (noChangeRequestsSelected$ | async)"
-      [loading]="loading"
-      primary
+    }
+  </div>
+  <hr />
+</bio-modal-content>
+<bio-modal-actions end>
+  <button bioButton type="button" (click)="modalRef.close()" [disabled]="loading">Close</button>
+  <button
+    bioButton
+    type="submit"
+    [disabled]="form.invalid || (noChangeRequestsSelected$ | async)"
+    [loading]="loading"
+    primary
     >
-      Submit
-    </button>
-    <button
-      bioButton
-      type="button"
-      [disabled]="loading"
-      danger
-      (click)="onCancelScore()"
-      [loading]="loadingCancelScore"
+    Submit
+  </button>
+  <button
+    bioButton
+    type="button"
+    [disabled]="loading"
+    danger
+    (click)="onCancelScore()"
+    [loading]="loadingCancelScore"
     >
-      Cancel score
-    </button>
-  </bio-modal-actions>
+    Cancel score
+  </button>
+</bio-modal-actions>
 </form>
