--- a/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
+++ b/src/app/score/score-list/score-list-responsive/score-list-responsive.component.html
@@ -1,4 +1,4 @@
-<ng-container *ngIf="isSmall$ | async; else scoreTable">
+@if (isSmall$ | async) {
   <bio-score-list
     [scores]="scores"
     [loading]="loading"
@@ -11,8 +11,7 @@
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (scoreClicked)="scoreClicked.emit($event)"
   ></bio-score-list>
-</ng-container>
-<ng-template #scoreTable>
+} @else {
   <bio-table
     [title]="title"
     [colDefs]="colDefs"
@@ -28,6 +27,6 @@
     (itemsPerPageChange)="itemsPerPageChange.emit($event)"
     (orderChange)="orderChange.emit($event)"
     (notifyChange)="notifyChange.emit($event)"
-  >
+    >
   </bio-table>
-</ng-template>
+}
