--- a/src/app/shared/components/accordion/accordion-item.component.html
+++ b/src/app/shared/components/accordion/accordion-item.component.html
@@ -4,13 +4,12 @@
   [tabIndex]="disabled ? -1 : 0"
   #header
   (keydown)="onKeydown($event)"
->
-  <ng-container *ngIf="accordionItemTitleDirectives?.length; else notTitleRef">
+  >
+  @if (accordionItemTitleDirectives?.length) {
     <ng-content select="[bioAccordionItemTitle], bio-accordion-item-title"></ng-content>
-  </ng-container>
-  <ng-template #notTitleRef>
+  } @else {
     <div class="accordion-item-title">{{ accordionTitle }}</div>
-  </ng-template>
+  }
   <div class="accordion-item-icon">
     <bio-icon [@collapseIcon]="expanded ? 'expanded' : 'collapsed'">expand_less</bio-icon>
   </div>
