--- a/src/app/shared/components/spinner/loading/loading.component.html
+++ b/src/app/shared/components/spinner/loading/loading.component.html
@@ -1,6 +1,7 @@
-<div *ngIf="!noBox; else onlySpinner" class="loading-box">
-  <bio-spinner [size]="0.5"></bio-spinner>
-</div>
-<ng-template #onlySpinner>
+@if (!noBox) {
+  <div class="loading-box">
+    <bio-spinner [size]="0.5"></bio-spinner>
+  </div>
+} @else {
   <bio-spinner></bio-spinner>
-</ng-template>
+}
